2007-12-12  Mathias Hasselmann  <mathias@openismus.com>

	Use shorter names for EpcCollisionHandling members.

	* libepc/dispatcher.h: Rename EPC_COLLISION_HANDLING_NONE,
	EPC_COLLISION_HANDLING_ALTERNATIVE_NAME and
	EPC_COLLISION_HANDLING_UNIQUE_SERVICE to EPC_COLLISIONS_IGNORE,
	EPC_COLLISIONS_CHANGE_NAME and EPC_COLLISIONS_UNIQUE_SERVICE.
	* tests/test-dispatcher-unique.c, tests/test-publisher-unique.c,
	tests/test-dispatcher-local-collision.c, libepc/dispatcher.c,
	libepc/publisher.c: Use short EpcCollisionHandling names.

2007-12-10  Mathias Hasselmann  <mathias@openismus.com>

	Implement fall back to alternative serivce name strategy, when the
	conflicting service has another service cookie, in unique service mode.

	* libepc/dispatcher.c, libepc/dispatcher.h: Ensure that dispatchers
	with unique service strategy have a service cookie. Rename
	epc_dispatcher_get_service_cookie to epc_dispatcher_get_cookie.
	Fall back to alternative serivce name strategy, when conflicting
	service has another service cookie, in unique service mode.
	* libepc/service-monitor.c, libepc/service-monitor.h: Add
	epc_service_monitor_new_for_types_strv and release local variables.
	* tests/test-dispatcher-local-collision.c:
	Verify alternative name strategy is chosen for collision handling.
	* tests/test-dispatcher-unique.c: Test collision
	handling with unique strategy, but different service cookies.
	* Makefile.am, tests/.gitignore: Add tests/test-dispatcher-unique.

2007-12-10  Mathias Hasselmann  <mathias@openismus.com>

	Improve parallel building of documentation

	* Makefile.am: Make all-local as dependend on $(lib_LTLIBRARIES)
	to make sure all libraries are built before documentation.

2007-12-08  Brian Pepple  <bpepple@fedoraproject.org>

	Fix so correct libdir is used on x86_64 (#502531).

	* libepc-1.0.pc.in, libepc-ui-1.0.pc.in:
	Use autoconf variables instead of hard-coded paths.

2007-12-06  Mathias Hasselmann  <mathias@openismus.com>

	Fix some minor glitches.
