@@ -420,6 +420,20 @@ epc_service_monitor_class_init (EpcServiceMonitorClass *cls)
   g_type_class_add_private (cls, sizeof (EpcServiceMonitorPrivate));
 }
 
+/**
+ * epc_service_monitor_new_for_types_strv:
+ * @domain: the DNS domain to monitor, or %NULL
+ * @types: a %NULL terminated list of service types to monitor
+ *
+ * Creates a new service monitor watching the specified @domain for the
+ * service-types listed. Passing %NULL for @domain monitors the local network.
+ * Passing an empty service list requests monitoring of all service-types
+ * supported by the library (see #epc_service_type_list_supported).
+ *
+ * See also: #epc_service_monitor_new_for_types
+ *
+ * Returns: The newly created service monitor.
+ */
 EpcServiceMonitor*
 epc_service_monitor_new_for_types_strv (const gchar  *domain,
                                         gchar       **types)
@@ -442,7 +456,10 @@ epc_service_monitor_new_for_types_strv (const gchar  *domain,
  * Passing an empty service list requests monitoring of all service-types
  * supported by the library (see #epc_service_type_list_supported).
  *
+ * See also: #epc_service_monitor_new_for_types_strv
+ *
  * Returns: The newly created service monitor.
+ * Since: 0.3.1
  */
 EpcServiceMonitor*
 epc_service_monitor_new_for_types (const gchar *domain,
